# rfid-admin

./: .gitignore  ]  auth.yml  docker-compose.yml  front.yml  install.sh  local_start.sh  pyproject.toml  pyrightconfig.json  tenant.yml  update-admin-front.sh  update-admin.sh  update-front.sh  update.sh
.github/workflows/: deploy.yml
docker/admin_backend/: Dockerfile  entrypoint.sh
docker/backend/: Dockerfile  callback.py  entrypoint.sh
docker/sender/: Dockerfile
docker/worker/: Dockerfile
home/sender/: Dockerfile  main.py
k8s/: admin-front.yml  admin.yml  auth.yml  db.yml  external.yml  front.yml  ingress-domain.yml  ingress-path.yml  rabbit.yml  sa.yml  tenant-conf.yml  tenant.yml
sender/: main.py
src/: main.py
src/backend/: gunicorn.conf.py  main.py  permissions.py  pyproject.toml  pyrightconfig.json  utils.py
src/backend/repositories/: auth_api.py  base.py  database.py  kube.py  mq.py  tenants.py
src/backend/routers/: backups.py  deployments.py  tenants.py  users.py
src/backend/schemas/: backups.py  tenants.py  users.py
src/backend/settings/: __init__.py  settings.py
src/deploy/: install.py  pyproject.toml
src/deploy/repositories/: storage.py
src/repositories/: __init__.py  auth_api.py  database.py  kube.py  mq.py  tenants.py
src/routers/: tenants.py
src/schemas/: backups.py  deployments.py  mixins.py  tenants.py  users.py
src/sender/: main.py  pyproject.toml  settings.py
src/settings/: settings.py
src/worker/: main.py  pyproject.toml  settings.py
worker/: Dockerfile  backup  main.py  pyproject.toml
(+2 files in other folders)
