[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["Roland Sobczak <rolandsobczak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
plumbum = "^1.8.3"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
